@@ -6,7 +6,7 @@ vips can get image header fields
 <?php 
   $filename = dirname(__FILE__) . "/images/img_0076.jpg";
   $image = vips_image_new_from_file($filename)["out"];
-  $width = vips_image_get($image, "width");
+  $width = vips_image_get($image, "width")["out"];
   if ($width == 1600) {
     echo("pass\n");
   }
