@@ -6,7 +6,7 @@ new_from_file supports optional args
 <?php 
   $filename = dirname(__FILE__) . "/images/img_0076.jpg";
   $image = vips_image_new_from_file($filename, ["shrink" => 8])["out"];
-  $width = vips_image_get($image, "width");
+  $width = vips_image_get($image, "width")["out"];
   if ($width == 200) {
 	echo "pass";
   }
