@@ -5,12 +5,12 @@ new_from_array works
 --FILE--
 <?php 
   $image = vips_image_new_from_array([1, 2, 3]);
-  $width1 = vips_image_get($image, "width");
-  $height1 = vips_image_get($image, "height");
+  $width1 = vips_image_get($image, "width")["out"];
+  $height1 = vips_image_get($image, "height")["out"];
 
   $image = vips_image_new_from_array([[1, 2, 3], [4, 5, 6]]);
-  $width2 = vips_image_get($image, "width");
-  $height2 = vips_image_get($image, "height");
+  $width2 = vips_image_get($image, "width")["out"];
+  $height2 = vips_image_get($image, "height")["out"];
 
   if ($width1 == 3 &&
 	$height1 == 1 &&
