@@ -3,7 +3,9 @@ vips extension changelog
 Version 0.1.1 (2016-10-03)
 --------------------------
 	* Support draw operations
-	* Add vips_error_buffer()
+	* Add vips_error_buffer(), remove docref messages
+	* return 0/-1 everywhere for error
+	* vips_image_get() returns ["out" => value] | -1
 
 Version 0.1.0 (2016-09-20)
 --------------------------
